Tidy up wordy AI documentation for multiblock tests