@@ -1,11 +1,5 @@
 package forestry.gametest;
 
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
-import java.util.UUID;
-
 import forestry.api.ForestryConstants;
 import forestry.api.multiblock.IMultiblockController;
 import forestry.api.multiblock.IMultiblockInventoryProbe;
@@ -14,7 +8,6 @@ import forestry.apiculture.features.ApicultureBlocks;
 import forestry.farming.blocks.EnumFarmBlockType;
 import forestry.farming.blocks.EnumFarmMaterial;
 import forestry.farming.features.FarmingBlocks;
-
 import net.minecraft.core.BlockPos;
 import net.minecraft.gametest.framework.GameTest;
 import net.minecraft.gametest.framework.GameTestHelper;
@@ -27,35 +20,33 @@ import net.minecraft.world.level.block.Blocks;
 import net.minecraft.world.level.block.entity.BlockEntity;
 import net.minecraft.world.level.block.state.BlockState;
 import net.minecraft.world.phys.AABB;
-
 import net.neoforged.neoforge.gametest.GameTestHolder;
 import net.neoforged.neoforge.gametest.PrefixGameTestTemplate;
 
+import java.util.*;
+
 /**
- * Inventory-conservation regression suite for Forestry multiblocks (alveary + farm).
+ * Data-corruption regression suite for Forestry multiblocks (alveary + farm).
  *
- * <p>Each test builds a real machine in an empty arena, loads a known countable item into its shared inventory, drives a
- * real game operation (chunk-style reload, block break, or a controller merge induced by block placement), and asserts
- * <b>conservation</b>: the items the machine started with end up either still in some machine or dropped on the floor —
- * never silently lost, never duplicated.
+ * <p>Each test builds the multiblock in an empty area, adds items into its shared inventory, triggers an operation
+ * (chunk-style reload, block break, or a controller merge induced by block placement), and checks for data corruption.
+ * A passing test means the items added at the start are either spilled out of the machine or kept intact, without any
+ * duplicates or missing items.
  *
- * <p><b>Fully engine-agnostic.</b> The only coupling to a specific multiblock engine is reading the shared inventory
- * through {@link IMultiblockInventoryProbe}; everything else is vanilla blocks/entities and Forestry-public block
- * registries. Nothing calls an internal merge/assimilate method. So the SAME tests are the oracle for the current
- * ("Erogenous Beef") engine and the upcoming overhaul — re-run {@code ./gradlew runGameTestServer} against the new
- * engine and every test should go green.
+ * <p>This suite is implementation-agnostic. To ensure corruption paths are fixed, the only coupling is through
+ * {@link IMultiblockInventoryProbe}, which can be tested against both implementations with minimal changes.
  *
- * <p><b>Baseline on the CURRENT engine</b> (validated by a real GameTest run): the reload tests FAIL with a DUPE (the
- * machine restores its inventory from the save-delegate NBT while a duplicate copy is spilled); the bridge-merge tests
- * FAIL with a silent LOSS; the break / partial-break tests PASS. On the overhaul branch all should pass.
+ * <p>With the BigReactors implementation, the reload tests FAIL with a DUPE: the machine restores its inventory from the
+ * save-delegate NBT while a duplicate copy dumps its items into the world and the bridge-merge tests FAIL with a silent
+ * LOSS of all items and data. Only the break / partial-break tests PASS. With the new implementation, all tests pass.
  *
- * <p><b>The silent loss is deterministically reproducible without any engine-internal call.</b> Merge mastership is
- * decided purely by reference-coord order (the lowest-coord controller consumes the rest), so an EMPTY machine at lower
- * coords that merges with a DATA machine at higher coords discards the data inventory — the empty {@code onAssimilate}
- * transfers nothing and the consumed controller is retired without a {@code destroyedCoord}, so nothing drops.
- * {@link #alvearyBridgeMergeConservesInventory} / {@link #farmBridgeMergeConservesInventory} reproduce exactly this by
- * placing a single bridge block between two separately-assembled machines, then asserting the union of inventories
- * survives across whatever controllers remain.
+ * <p>The silent loss is reproducible without any internal API calls. In the BigReactors implementation, selection of a
+ * new save delegate is decided by reference-coord order (the lowest-coord controller consumes the rest), so an EMPTY
+ * machine at lower coords can wipe the data of a machine at higher coords, as the empty {@code onAssimilate}
+ * transfers nothing and the consumed controller is discarded without a {@code destroyedCoord}, meaning nothing drops.
+ * {@link #alvearyBridgeMergeConservesInventory} / {@link #farmBridgeMergeConservesInventory} reproduce this scenario by
+ * placing a single bridge block between two separately-assembled machines, then checking that the inventories survive
+ * across the controller merge.
  */
 @GameTestHolder(ForestryConstants.MOD_ID)
 @PrefixGameTestTemplate(false)
@@ -63,7 +54,9 @@ public class MultiblockGameTests {
 	private static final BlockPos BASE = new BlockPos(6, 1, 6);
 	private static final int TIMEOUT = 240;
 
-	/** A countable, vanilla item used as the tracked inventory contents (slot acceptance is bypassed on insert). */
+	/**
+	 * Item used as the sample inventory contents (slot acceptance is bypassed on insert).
+	 */
 	private static ItemStack trackedStack() {
 		return new ItemStack(Items.HONEYCOMB, 7);
 	}
@@ -76,7 +69,7 @@ public class MultiblockGameTests {
 		return FarmingBlocks.FARM.get(EnumFarmBlockType.PLAIN, EnumFarmMaterial.STONE_BRICK).defaultState();
 	}
 
-	/* ===================== Alveary ===================== */
+	// ===================== Alveary =====================
 
 	@GameTest(template = "empty", timeoutTicks = TIMEOUT)
 	public static void alvearyRoundTripConservesInventory(GameTestHelper helper) {
@@ -103,7 +96,7 @@ public class MultiblockGameTests {
 		bridgeMerge(helper, MultiblockTestSupport::buildAlveary, alvearyPart(), MultiblockTestSupport.ALVEARY_INV_SIZE, 2);
 	}
 
-	/* ===================== Farm ===================== */
+	// ===================== Farm =====================
 
 	@GameTest(template = "empty", timeoutTicks = TIMEOUT)
 	public static void farmRoundTripConservesInventory(GameTestHelper helper) {
@@ -125,15 +118,19 @@ public class MultiblockGameTests {
 		bridgeMerge(helper, MultiblockTestSupport::buildFarm, farmPart(), MultiblockTestSupport.FARM_INV_SIZE, 0);
 	}
 
-	/* ===================== shared scenarios ===================== */
+	// ===================== shared scenarios =====================
 
-	/** Build fn: places the machine at {@code base} (relative) and returns its absolute member positions. */
+	/**
+	 * Function to place the machine at {@code base} (relative) and return its absolute member positions.
+	 */
 	@FunctionalInterface
 	private interface Builder {
 		List<BlockPos> build(GameTestHelper helper, BlockPos base);
 	}
 
-	/** Mutable state threaded across the sequence steps of a single test. */
+	/**
+	 * State used throughout the steps of a single test.
+	 */
 	private static final class Run {
 		List<BlockPos> members;
 		List<BlockPos> membersLow;
@@ -155,74 +152,77 @@ public class MultiblockGameTests {
 		ServerLevel level = helper.getLevel();
 		Run run = new Run();
 		helper.startSequence()
-				.thenExecute(() -> {
-					placeFloor(helper);
-					run.members = builder.build(helper, BASE);
-				})
-				.thenExecuteAfter(5, () -> {
-					assertAssembledAndLoad(helper, run, invSize, slot);
-					MultiblockTestSupport.reloadInPlace(level, run.members);
-				})
-				.thenExecuteAfter(8, () -> assertConservedNoLeak(helper, run, "reload"))
-				.thenSucceed();
+			.thenExecute(() -> {
+				placeFloor(helper);
+				run.members = builder.build(helper, BASE);
+			})
+			.thenExecuteAfter(5, () -> {
+				assertAssembledAndLoad(helper, run, invSize, slot);
+				MultiblockTestSupport.reloadInPlace(level, run.members);
+			})
+			.thenExecuteAfter(8, () -> assertConservedNoLeak(helper, run, "reload"))
+			.thenSucceed();
 	}
 
 	/**
-	 * Staged reload in the adversarial "save-delegate arrives last" order: recreate every member except the anchor, let
+	 * Test reloading in the "save-delegate arrives last" order: recreate every member except the anchor, let
 	 * a partial controller form (asserted, so this is a genuinely different code path from {@link #roundTrip}), THEN
-	 * recreate the anchor and let the structure reform. Same conservation assertion.
+	 * recreate the anchor and let the structure reform, and check that the save delegate was not wiped.
 	 */
 	private static void stagedReload(GameTestHelper helper, Builder builder, int invSize, int slot) {
 		ServerLevel level = helper.getLevel();
 		Run run = new Run();
 		helper.startSequence()
-				.thenExecute(() -> {
-					placeFloor(helper);
-					run.members = builder.build(helper, BASE);
-				})
-				.thenExecuteAfter(5, () -> {
-					assertAssembledAndLoad(helper, run, invSize, slot);
-					run.fresh = MultiblockTestSupport.teardown(level, run.members);
-				})
-				.thenExecute(() -> {
-					List<BlockPos> withoutAnchor = new ArrayList<>(run.members);
-					withoutAnchor.remove(0); // the anchor (lowest-(x,y,z) member, the save-delegate)
-					MultiblockTestSupport.placeAndRegister(level, run.fresh, withoutAnchor);
-				})
-				.thenExecuteAfter(4, () -> {
-					helper.assertTrue(MultiblockTestSupport.controllerAt(level, run.members.get(1)) != null,
-							"staged path not exercised: no partial controller formed from the non-anchor members");
-					MultiblockTestSupport.placeAndRegister(level, run.fresh, List.of(run.members.get(0)));
-				})
-				.thenExecuteAfter(8, () -> assertConservedNoLeak(helper, run, "staged reload (anchor last)"))
-				.thenSucceed();
+			.thenExecute(() -> {
+				placeFloor(helper);
+				run.members = builder.build(helper, BASE);
+			})
+			.thenExecuteAfter(5, () -> {
+				assertAssembledAndLoad(helper, run, invSize, slot);
+				run.fresh = MultiblockTestSupport.teardown(level, run.members);
+			})
+			.thenExecute(() -> {
+				List<BlockPos> withoutAnchor = new ArrayList<>(run.members);
+				// the anchor (lowest-(x,y,z) member, the save-delegate)
+				withoutAnchor.removeFirst();
+				MultiblockTestSupport.placeAndRegister(level, run.fresh, withoutAnchor);
+			})
+			.thenExecuteAfter(4, () -> {
+				helper.assertTrue(MultiblockTestSupport.controllerAt(level, run.members.get(1)) != null,
+					"staged path not exercised: no partial controller formed from the non-anchor members");
+				MultiblockTestSupport.placeAndRegister(level, run.fresh, List.of(run.members.get(0)));
+			})
+			.thenExecuteAfter(8, () -> assertConservedNoLeak(helper, run, "staged reload (anchor last)"))
+			.thenSucceed();
 	}
 
-	/** Break every member: the inventory must be fully dropped as items, never silently wiped and never duplicated. */
+	/**
+	 * Break every member: the inventory must be fully dropped as items, never silently wiped and never duplicated.
+	 */
 	private static void breakAll(GameTestHelper helper, Builder builder, int invSize, int slot) {
 		ServerLevel level = helper.getLevel();
 		Run run = new Run();
 		helper.startSequence()
-				.thenExecute(() -> {
-					placeFloor(helper);
-					run.members = builder.build(helper, BASE);
-				})
-				.thenExecuteAfter(5, () -> {
-					assertAssembledAndLoad(helper, run, invSize, slot);
-					for (BlockPos member : run.members) {
-						level.destroyBlock(member, false); // remove block, no block-item drop; inventory still spills
-					}
-				})
-				.thenExecuteAfter(8, () -> {
-					int expected = MultiblockTestSupport.total(run.before);
-					int kept = keptInMachine(level, run);
-					int dropped = MultiblockTestSupport.newDropCount(level, run.box, run.dropsBefore, trackedStack().getItem());
-					// exact conservation: every tracked item dropped exactly once, none left behind, none duplicated.
-					helper.assertTrue(kept == 0, "break left " + kept + " item(s) in the machine instead of dropping them");
-					helper.assertTrue(dropped == expected,
-							"break did not conserve: dropped " + dropped + " but expected exactly " + expected + " (wipe or dupe)");
-				})
-				.thenSucceed();
+			.thenExecute(() -> {
+				placeFloor(helper);
+				run.members = builder.build(helper, BASE);
+			})
+			.thenExecuteAfter(5, () -> {
+				assertAssembledAndLoad(helper, run, invSize, slot);
+				for (BlockPos member : run.members) {
+					level.destroyBlock(member, false); // remove block, no block-item drop; inventory still spills
+				}
+			})
+			.thenExecuteAfter(8, () -> {
+				int expected = MultiblockTestSupport.total(run.before);
+				int kept = keptInMachine(level, run);
+				int dropped = MultiblockTestSupport.newDropCount(level, run.box, run.dropsBefore, trackedStack().getItem());
+				// exact conservation: every tracked item dropped exactly once, none left behind, none duplicated.
+				helper.assertTrue(kept == 0, "break left " + kept + " item(s) in the machine instead of dropping them");
+				helper.assertTrue(dropped == expected,
+					"break did not conserve: dropped " + dropped + " but expected exactly " + expected + " (wipe or dupe)");
+			})
+			.thenSucceed();
 	}
 
 	/**
@@ -236,84 +236,89 @@ public class MultiblockGameTests {
 		ServerLevel level = helper.getLevel();
 		Run run = new Run();
 		helper.startSequence()
-				.thenExecute(() -> {
-					placeFloor(helper);
-					run.members = builder.build(helper, BASE);
-				})
-				.thenExecuteAfter(5, () -> {
-					assertAssembledAndLoad(helper, run, invSize, slot);
-					run.brokenPos = run.members.get(run.members.size() - 1); // one corner, not the anchor
-					run.brokenState = level.getBlockState(run.brokenPos);
-					level.destroyBlock(run.brokenPos, false);
-				})
-				.thenExecuteAfter(4, () ->
-						// restore the broken part: a stash-based engine re-seeds its dormant payload on re-validation
-						level.setBlock(run.brokenPos, run.brokenState, Block.UPDATE_ALL))
-				.thenExecuteAfter(6, () -> {
-					int expected = MultiblockTestSupport.total(run.before);
-					int kept = keptInMachine(level, run);
-					int dropped = MultiblockTestSupport.newDropCount(level, run.box, run.dropsBefore, trackedStack().getItem());
-					helper.assertTrue(kept + dropped >= expected,
-							"SILENT WIPE on break+restore: " + expected + " before; only " + kept + " recovered + " + dropped + " dropped");
-				})
-				.thenSucceed();
+			.thenExecute(() -> {
+				placeFloor(helper);
+				run.members = builder.build(helper, BASE);
+			})
+			.thenExecuteAfter(5, () -> {
+				assertAssembledAndLoad(helper, run, invSize, slot);
+				run.brokenPos = run.members.getLast(); // one corner, not the anchor
+				run.brokenState = level.getBlockState(run.brokenPos);
+				level.destroyBlock(run.brokenPos, false);
+			})
+			.thenExecuteAfter(4, () ->
+				// restore the broken part: a stash-based engine re-seeds its dormant payload on re-validation
+				level.setBlock(run.brokenPos, run.brokenState, Block.UPDATE_ALL))
+			.thenExecuteAfter(6, () -> {
+				int expected = MultiblockTestSupport.total(run.before);
+				int kept = keptInMachine(level, run);
+				int dropped = MultiblockTestSupport.newDropCount(level, run.box, run.dropsBefore, trackedStack().getItem());
+				helper.assertTrue(kept + dropped >= expected,
+					"SILENT WIPE on break+restore: " + expected + " before; only " + kept + " recovered + " + dropped + " dropped");
+			})
+			.thenSucceed();
 	}
 
 	/**
-	 * The silent-LOSS oracle — fully engine-agnostic (block placement only, no engine-internal merge call). Builds two
-	 * separately-assembled machines, an EMPTY one at lower coords (x=3..5) and a DATA one at higher coords (x=7..9),
-	 * places a single bridge part in the 1-block gap (x=6, bottom row) so the two controllers collide, then UN-bridges
-	 * to restore two valid structures and measures recovery. On the old engine the lower (empty) controller assimilates
-	 * the higher (data) one and the inventory vanishes silently — un-bridging cannot bring it back, so it FAILS. An
-	 * engine that conserves on merge (keeps it live, stashes and re-seeds on un-bridge, or drops it) passes. The
-	 * conservation assertion sums inventory across ALL surviving controllers plus drops.
+	 * The silent-LOSS oracle — implementation agnostic, block placement only, no internal API merge call.
+	 * Builds two separate multiblocks, an EMPTY one at lower coords (x=3..5) and a DATA one at higher coords (x=7..9),
+	 * places a single bridge part in the 1-block gap (x=6, bottom row) so the two controllers merge, then UN-bridges
+	 * to restore two valid structures and measures recovery.
+	 *
+	 * <p>On the old implementation, the lower EMPTY controller assimilates the higher DATA one and its inventory is wiped (FAIL).
+	 * The new implementation conserves on merge (keeps it live, stashes and re-seeds on un-bridge, or drops it) (PASS).
+	 * The conservation assertion sums inventory across ALL surviving controllers plus drops.
 	 */
 	private static void bridgeMerge(GameTestHelper helper, Builder builder, BlockState bridgePart, int invSize, int slot) {
 		ServerLevel level = helper.getLevel();
-		BlockPos lowBase = new BlockPos(3, 1, 3);   // empty machine, x=3..5
-		BlockPos highBase = new BlockPos(7, 1, 3);  // data machine,  x=7..9 (1-block gap at x=6)
-		BlockPos bridgeRel = new BlockPos(6, 1, 3); // bottom-row bridge, face-touches x=5 (low) and x=7 (high)
+		// EMPTY machine, x=3..5
+		BlockPos lowBase = new BlockPos(3, 1, 3);
+		// DATA machine,  x=7..9 (1-block gap at x=6)
+		BlockPos highBase = new BlockPos(7, 1, 3);
+		// bottom-row bridge block, face-touches x=5 (EMPTY) and x=7 (DATA)
+		BlockPos bridgeRel = new BlockPos(6, 1, 3);
 		Run run = new Run();
 		helper.startSequence()
-				.thenExecute(() -> {
-					placeFloor(helper);
-					run.membersLow = builder.build(helper, lowBase);
-					run.membersHigh = builder.build(helper, highBase);
-				})
-				.thenExecuteAfter(6, () -> {
-					helper.assertTrue(MultiblockTestSupport.isAssembled(level, run.membersLow.get(0)), "low machine failed to assemble");
-					helper.assertTrue(MultiblockTestSupport.isAssembled(level, run.membersHigh.get(0)), "high machine failed to assemble");
-					helper.assertTrue(MultiblockTestSupport.controllerAt(level, run.membersLow.get(0))
-									!= MultiblockTestSupport.controllerAt(level, run.membersHigh.get(0)),
-							"the two machines unexpectedly share one controller before bridging");
-					MultiblockTestSupport.insertItem(level, run.membersHigh, invSize, slot, trackedStack());
-					run.before = MultiblockTestSupport.tally(MultiblockTestSupport.snapshot(level, run.membersHigh.get(0)));
-					helper.assertTrue(MultiblockTestSupport.total(run.before) > 0, "inventory insertion failed (nothing to track)");
-					run.box = MultiblockTestSupport.dropBox(union(run.membersLow, run.membersHigh));
-					run.dropsBefore = MultiblockTestSupport.itemEntityIds(level, run.box);
-					helper.setBlock(bridgeRel, bridgePart); // the bridge — induces the merge, no engine-internal call
-				})
-				.thenExecuteAfter(8, () ->
-						// un-bridge: restore two valid structures so a stash-based engine re-seeds the dormant payload
-						level.setBlock(helper.absolutePos(bridgeRel), Blocks.AIR.defaultBlockState(), Block.UPDATE_ALL))
-				.thenExecuteAfter(8, () -> {
-					int expected = MultiblockTestSupport.total(run.before);
-					int kept = MultiblockTestSupport.keptAcross(level, union(run.membersLow, run.membersHigh), trackedStack().getItem());
-					int dropped = MultiblockTestSupport.newDropCount(level, run.box, run.dropsBefore, trackedStack().getItem());
-					helper.assertTrue(kept + dropped == expected,
-							"non-conservation on bridge merge: expected " + expected + " kept+dropped across all controllers, got kept="
-									+ kept + " dropped=" + dropped + (kept + dropped < expected ? " (SILENT LOSS)" : " (DUPE)"));
-				})
-				.thenSucceed();
+			.thenExecute(() -> {
+				placeFloor(helper);
+				run.membersLow = builder.build(helper, lowBase);
+				run.membersHigh = builder.build(helper, highBase);
+			})
+			.thenExecuteAfter(6, () -> {
+				helper.assertTrue(MultiblockTestSupport.isAssembled(level, run.membersLow.getFirst()), "low machine failed to assemble");
+				helper.assertTrue(MultiblockTestSupport.isAssembled(level, run.membersHigh.getFirst()), "high machine failed to assemble");
+				helper.assertTrue(MultiblockTestSupport.controllerAt(level, run.membersLow.getFirst())
+						!= MultiblockTestSupport.controllerAt(level, run.membersHigh.getFirst()),
+					"the two machines unexpectedly share one controller before bridging");
+				MultiblockTestSupport.insertItem(level, run.membersHigh, invSize, slot, trackedStack());
+				run.before = MultiblockTestSupport.tally(MultiblockTestSupport.snapshot(level, run.membersHigh.getFirst()));
+				helper.assertTrue(MultiblockTestSupport.total(run.before) > 0, "inventory insertion failed (nothing to track)");
+				run.box = MultiblockTestSupport.dropBox(union(run.membersLow, run.membersHigh));
+				run.dropsBefore = MultiblockTestSupport.itemEntityIds(level, run.box);
+				// bridge: triggers the merge, no internal API call
+				helper.setBlock(bridgeRel, bridgePart);
+			})
+			.thenExecuteAfter(8, () ->
+				// un-bridge: restore two valid structures so a stash-based engine re-seeds the dormant payload
+				level.setBlock(helper.absolutePos(bridgeRel), Blocks.AIR.defaultBlockState(), Block.UPDATE_ALL))
+			.thenExecuteAfter(8, () -> {
+				int expected = MultiblockTestSupport.total(run.before);
+				int kept = MultiblockTestSupport.keptAcross(level, union(run.membersLow, run.membersHigh), trackedStack().getItem());
+				int dropped = MultiblockTestSupport.newDropCount(level, run.box, run.dropsBefore, trackedStack().getItem());
+				helper.assertTrue(kept + dropped == expected,
+					"non-conservation on bridge merge: expected " + expected + " kept+dropped across all controllers, got kept="
+						+ kept + " dropped=" + dropped + (kept + dropped < expected ? " (SILENT LOSS)" : " (DUPE)"));
+			})
+			.thenSucceed();
 	}
 
-	/* ===================== shared steps ===================== */
+	// ===================== shared steps =====================
 
 	private static void assertAssembledAndLoad(GameTestHelper helper, Run run, int invSize, int slot) {
 		ServerLevel level = helper.getLevel();
-		helper.assertTrue(MultiblockTestSupport.isAssembled(level, run.members.get(0)), "structure failed to assemble");
+		helper.assertTrue(MultiblockTestSupport.isAssembled(level, run.members.getFirst()), "structure failed to assemble");
 		MultiblockTestSupport.insertItem(level, run.members, invSize, slot, trackedStack());
-		run.before = MultiblockTestSupport.tally(MultiblockTestSupport.snapshot(level, run.members.get(0)));
+		run.before = MultiblockTestSupport.tally(MultiblockTestSupport.snapshot(level, run.members.getFirst()));
 		helper.assertTrue(MultiblockTestSupport.total(run.before) > 0, "inventory insertion failed (nothing to track)");
 		run.box = MultiblockTestSupport.dropBox(run.members);
 		run.dropsBefore = MultiblockTestSupport.itemEntityIds(level, run.box);
@@ -322,25 +327,25 @@ public class MultiblockGameTests {
 	private static void assertConservedNoLeak(GameTestHelper helper, Run run, String op) {
 		ServerLevel level = helper.getLevel();
 		// distinguish a genuine verdict from an inconclusive / infrastructure failure
-		helper.assertTrue(MultiblockTestSupport.isAssembled(level, run.members.get(0)),
-				op + ": structure did not reform within the tick budget (inconclusive, not a verdict)");
-		helper.assertTrue(MultiblockTestSupport.controllerAt(level, run.members.get(0)) instanceof IMultiblockInventoryProbe,
-				op + ": inventory probe seam missing after the operation (cannot measure conservation)");
-		IMultiblockController owner = MultiblockTestSupport.controllerAt(level, run.members.get(0));
+		helper.assertTrue(MultiblockTestSupport.isAssembled(level, run.members.getFirst()),
+			op + ": structure did not reform within the tick budget (inconclusive, not a verdict)");
+		helper.assertTrue(MultiblockTestSupport.controllerAt(level, run.members.getFirst()) instanceof IMultiblockInventoryProbe,
+			op + ": inventory probe seam missing after the operation (cannot measure conservation)");
+		IMultiblockController owner = MultiblockTestSupport.controllerAt(level, run.members.getFirst());
 		for (BlockPos member : run.members) {
 			helper.assertTrue(MultiblockTestSupport.controllerAt(level, member) == owner,
-					op + ": members split across multiple controllers");
+				op + ": members split across multiple controllers");
 		}
-		Map<Item, Integer> after = MultiblockTestSupport.tally(MultiblockTestSupport.snapshot(level, run.members.get(0)));
+		Map<Item, Integer> after = MultiblockTestSupport.tally(MultiblockTestSupport.snapshot(level, run.members.getFirst()));
 		int leaked = MultiblockTestSupport.newDropCount(level, run.box, run.dropsBefore, trackedStack().getItem());
 		helper.assertTrue(after.equals(run.before),
-				"LOSS across " + op + ": inventory changed before=" + run.before + " after=" + after);
+			"LOSS across " + op + ": inventory changed before=" + run.before + " after=" + after);
 		helper.assertTrue(leaked == 0,
-				"DUPE across " + op + ": machine kept its inventory but " + leaked + " duplicate item(s) were spilled");
+			"DUPE across " + op + ": machine kept its inventory but " + leaked + " duplicate item(s) were spilled");
 	}
 
 	private static int keptInMachine(ServerLevel level, Run run) {
-		return MultiblockTestSupport.total(MultiblockTestSupport.tally(MultiblockTestSupport.snapshot(level, run.members.get(0))));
+		return MultiblockTestSupport.total(MultiblockTestSupport.tally(MultiblockTestSupport.snapshot(level, run.members.getFirst())));
 	}
 
 	private static List<BlockPos> union(List<BlockPos> a, List<BlockPos> b) {
@@ -349,7 +354,9 @@ public class MultiblockGameTests {
 		return all;
 	}
 
-	/** A stone floor across the arena bottom so dropped items land within the measured box instead of falling away. */
+	/**
+	 * A stone floor to catch spilled items instead of letting them fall into the void.
+	 */
 	private static void placeFloor(GameTestHelper helper) {
 		BlockState stone = Blocks.STONE.defaultBlockState();
 		for (int x = 0; x < 16; x++) {
